# noto

./: .gitignore  CMakeLists.txt  Makefile  README.md  functions.c  functions.h  main.c  noto.c
include/: create.h  delete.h  generate.h  get.h  main.h  noto.h  noto_create_entry.h  noto_create_new_db.h  noto_db_create.h  noto_db_get_path.h  noto_delete_line.h  noto_entry_create.h  noto_entry_delete.h  noto_entry_show.h  noto_entry_show_all.h  noto_generate_hash.h  noto_get_path_to_db.h  noto_hash_generate.h  noto_hash_is_unique.h  noto_line_delete.h  noto_remove_entry.h  noto_show_all.h  noto_show_entry.h  remove.h  show.h
lib/: create_entry.c  create_new_db.c  delete_line.c  generate_hash.c  get_path_to_db.c  noto.h  remove_entry.c  show_all.c  show_entry.c
src/: create_entry.c  create_new_db.c  delete_line.c  generate_hash.c  get_path_to_db.c  main.c  main.h  noto.c  noto_create_entry.c  noto_create_new_db.c  noto_db_create.c  noto_db_get_path.c  noto_delete_line.c  noto_entry_create.c  noto_entry_delete.c  noto_entry_show.c  noto_entry_show_all.c  noto_generate_hash.c  noto_get_path_to_db.c  noto_hash_generate.c  noto_hash_is_unique.c  noto_line_delete.c  noto_remove_entry.c  noto_show_all.c  noto_show_entry.c  remove_entry.c  show_all.c  show_entry.c
src/headers/: create_entry.h  create_new_db.h  delete_line.h  generate_hash.h  get_path_to_db.h  main.h  remove_entry.h  show_all.h  show_entry.h
tests/: test_main.c  test_noto.c  test_noto.h
